--- a/index.html
+++ b/index.html
@@ -4,25 +4,90 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
     <title>repl.it</title>
-    <link href="style.css" rel="stylesheet" type="text/css">
+    <link href="styles.css" rel="stylesheet" type="text/css">
+    <link 
+    rel="stylesheet" 
+    href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" 
+    integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" 
+    crossorigin="anonymous"/>
   </head>
+<!-- Icon spans/banner img starts here-->
   <body>
     <div id="pic">
-      BIG FANCY PIC
+      <img src="https://cdn.akamai.steamstatic.com/steam/apps/553850/capsule_616x353.jpg?t=1707955699" alt="Helldivers 2 Coverart">
     </div>
     <div id="icons">
-      <span>Icon</span>
-      <span>Icon</span>
-      <span>Icon</span>
-      <span>Icon</span>
-      <span>Icon</span>
-      <span>Icon</span>
+      <span><i class="fa fa-database" aria-hidden="true"></i></span>
+      <span><i class="fa fa-gamepad" aria-hidden="true"></i></span>
+      <span><i class="fa fa-fighter-jet" aria-hidden="true"></i></span>
+      <span><i class="fa fa-cog" aria-hidden="true"></i></span>
+      <span><i class="fa fa-bomb" aria-hidden="true"></i></span>
+      <span><i class="fa fa-binoculars" aria-hidden="true"></i></span>
     </div>
+<!-- Icon spans/banner img ends here-->
+<!-- Inline-block span elements begins here -->
     <div id="mini-layout">
-      <span>Block 1</span>
-      <span>Block 2</span>
-      <span>Block 3</span>
-      <span>Block 4</span>
+      <span>Weapon 1
+        <div>
+            <img src="https://oyster.ignimgs.com/mediawiki/apis.ign.com/helldivers-2/0/06/Helldivers2_Weapons_%2814%29.png?" 
+            alt="Helldivers 2 weapon image one"> 
+        </div>
+        <div>
+            <strong>AR-23E Liberator Explosive</strong>
+        </div>
+        <div>
+            <p>Full auto, explosive ammo, light armor penetration.</p>
+        </div>
+        <div>
+            <a href="https://www.ign.com/wikis/helldivers-2/Weapons">Full weapon list</a>
+        </div>
+      </span>
+      <span>Weapon 2
+        <div>
+            <img src="https://oyster.ignimgs.com/mediawiki/apis.ign.com/helldivers-2/b/b3/Helldivers2_Weapons_%282%29.png?" 
+            alt="Helldivers 2 weapon image 2">
+        </div>
+        <div>
+            <strong>AR23-Liberator</strong>
+        </div>
+        <div>
+            <p>Full auto, medium damage, light armor penetration.</p>
+        </div>
+        <div>
+            <a href="https://www.ign.com/wikis/helldivers-2/Weapons">Full weapon list</a>
+        </div>
+      </span>
+      <span>Weapon 3
+        <div>
+            <img src="https://oyster.ignimgs.com/mediawiki/apis.ign.com/helldivers-2/8/84/Helldivers2_Weapons_%2810%29.png?" 
+            alt="Helldivers 2 weapon image 3">
+        </div>
+        <div>
+            <strong>AR-23P Liberator Penetrator</strong>
+        </div>
+        <div>
+            <p>DMR, high damage, medium armor penetration.</p>
+        </div>
+        <div>
+            <a href="https://www.ign.com/wikis/helldivers-2/Weapons">Full weapon list</a>
+        </div>
+      </span>
+      <span>Weapon 4
+        <div>
+            <img src="https://oyster.ignimgs.com/mediawiki/apis.ign.com/helldivers-2/8/84/Helldivers2_Weapons_%2811%29.png?" 
+            alt="Helldiver 2 weapon image 3">
+        </div>
+        <div>
+            <strong>SG-8s Slugger Shotgun</strong>
+        </div>
+        <div>
+            <p>Slug shotgun, high damage, low firerate.</p>
+        </div>
+        <div>
+            <a href="https://www.ign.com/wikis/helldivers-2/Weapons">Full weapon list</a>
+        </div>
+      </span>
     </div>
+<!-- Inline-block span elements ends here -->
   </body>
 </html>
